tests/regression/baselines/test26_unusual_combinations.expected
ERROR
SyntaxError: Unexpected token print
Note: expected tokens: ["(", "`", "begin", "{", r#"\"[^\\\\\"\\n\\r]*(?:\\\\[tn'\"\\\\][^\\\\\"\\n\\r]*)*\""#, r#"-?(?:0|[1-9][0-9]*)[eE]-?[0-9]+"#, r#"-?(?:0|[1-9][0-9]*)\\.[0-9]*(?:[eE]-?[0-9]+)?"#, r#"-?(?:[0-9]+)"#, r#"[A-Za-z_]\\w*"#]
Parse error occurred here:
let weird = `Data (1, "hello", true);
match weird with
| `Data (a, b, c) -> print a, b, c;
                     ^~~~~          
// Test deeply nested records
